crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__close_discards_overlay_and_clears_diagnostics.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module Main exposing (..)\nvalue = unknown\n"
---
{
  "uri": "file:///project/src/Main.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `unknown`.\n\n\n\nSimilar names:\n\n    not\n    show\n    Int.pow\n    and",
      "data": [
        "not",
        "show",
        "Int.pow",
        "and"
      ]
    }
  ],
  "version": 8
}
