crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__independent_disk_module_errors_are_published_and_cleared-2.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module Other exposing (..)\nvalue = missing\n"
---
{
  "uri": "file:///project/src/Other.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `missing`.\n\n\n\nSimilar names:\n\n    min\n    bind\n    fromInt\n    List.any",
      "data": [
        "min",
        "bind",
        "fromInt",
        "List.any"
      ]
    }
  ]
}
