crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__lsp_and_json_contain_the_same_problem_set_and_spans.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module Main exposing (..)\nvalue = unknown\n"
---
{
  "uri": "file:///project/src/Main.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `unknown`.\n\n\n\nSimilar names:\n\n    not\n    show\n    Int.min\n    Int.pow",
      "data": [
        "not",
        "show",
        "Int.min",
        "Int.pow"
      ]
    }
  ],
  "version": 1
}
