crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__nested_projects_use_the_most_specific_owning_root-2.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module Main exposing (..)\nvalue = unknown\n"
---
{
  "uri": "file:///project/nested/src/Main.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `unknown`.\n\n\n\nSimilar names:\n\n    not\n    show\n    Int.pow\n    and",
      "data": [
        "not",
        "show",
        "Int.pow",
        "and"
      ]
    }
  ],
  "version": 1
}
