crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__unreadable_source_has_a_diagnostic_that_clears_after_repair.snap
---
source: crates/nash-language-server/src/workspace.rs
description: read src/Unavailable.nash (a directory)
---
{
  "uri": "file:///project/src/Unavailable.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 0
        },
        "end": {
          "line": 0,
          "character": 0
        }
      },
      "severity": 1,
      "code": "SOURCE UNAVAILABLE",
      "source": "nash",
      "message": "failed to read file /project/src/Unavailable.nash: <directory read error>"
    }
  ]
}
