crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__unsaved_new_file_is_discovered.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module New exposing (..)\nvalue = missing\n"
---
{
  "uri": "file:///project/src/New.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `missing`.\n\n\n\nSimilar names:\n\n    min\n    bind\n    fromInt\n    and",
      "data": [
        "min",
        "bind",
        "fromInt",
        "and"
      ]
    }
  ],
  "version": 1
}
