crates/nash-language-server/src/snapshots/nash_language_server__workspace__tests__unsaved_versions_override_disk_and_clear_fixed_errors.snap
---
source: crates/nash-language-server/src/workspace.rs
description: "module Main exposing (..)\nvalue = unknown\n"
---
{
  "uri": "file:///project/src/Main.nash",
  "diagnostics": [
    {
      "range": {
        "start": {
          "line": 1,
          "character": 8
        },
        "end": {
          "line": 1,
          "character": 15
        }
      },
      "severity": 1,
      "code": "nash::names::not_found_var",
      "source": "nash",
      "message": "Unknown variable `unknown`.\n\n\n\nSimilar names:\n\n    not\n    show\n    and\n    bind",
      "data": [
        "not",
        "show",
        "and",
        "bind"
      ]
    }
  ],
  "version": 1
}
